mudanca para exibicao da estrutura do projeto, mas sem exibir os dados

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Arquivos locais
 *.env
-data/enderecos_validos.csv
-data/enderecos_invalidos.csv
-data/Lista_ceps.csv
+data/*
+!data/.gitkeep
+
 
 # Ambientes virtuais
 .venv/
